welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: '(' expected but '{' found.
	}else if{ (a<0 && b<0)
                ^posNeg:8: error: illegal start of simple expression
}
^